Finished cards section.

--- a/index.html
+++ b/index.html
@@ -25,21 +25,45 @@
         <div class="hero">
             <div class="hero-signup">
                 <div class="hero-main-text">
-                    This website is awesome
+                    This website is about Pepe
                 </div>
                 <div class="hero-secondary-text">
-                    This website has some subtext that goes here under the main title.
-                    It's a smaller font and the color is lower contrast.
+                    <div>
+                        Pepe the Frog is an anthromorphic frog character who has taken the internet by storm.
+                    </div>
+                    <div>
+                        He is now an infamous meme. Have you seen him?
+                    </div>
                 </div>
                 <button class="sign-up-button">
-                    Sign up
+                    Now I have
                 </button>
             </div>
             <img class="pepe" src="../images/pepe_signup.jpeg" alt="Sign up now!!!">
         </div>
 
-        <div class="section info">
-            INFO
+        <div class="cards">
+            <div class="title">
+                Pepe is a master of expressions.
+            </div>
+            <div class="gallery">
+                <div class="card">
+                   <img class="img" src="../images/pepe-happy.png" alt="">
+                   <div class="caption">Happy</div>
+                </div>
+                <div class="card">
+                    <img class="img" src="../images/pepe-smug.png" alt="">
+                    <div class="caption">Smug</div>
+                 </div>
+                 <div class="card">
+                    <img class="img" src="../images/pepe-sad.png" alt="">
+                    <div class="caption">Sad</div>
+                 </div>
+                 <div class="card">
+                    <img class="img" src="../images/pepe-clown.png" alt="">
+                    <div class="caption">Clown</div>
+                 </div>
+            </div>
         </div>
 
         <div class="section quote">
