Finish quote section, action section, footer.

--- a/index.html
+++ b/index.html
@@ -48,33 +48,56 @@
             </div>
             <div class="gallery">
                 <div class="card">
-                   <img class="img" src="../images/pepe-happy.png" alt="">
-                   <div class="caption">Happy</div>
+                    <img class="img" src="../images/pepe-happy.png" alt="">
+                    <div class="caption">Happy</div>
                 </div>
                 <div class="card">
                     <img class="img" src="../images/pepe-smug.png" alt="">
                     <div class="caption">Smug</div>
-                 </div>
-                 <div class="card">
+                </div>
+                <div class="card">
                     <img class="img" src="../images/pepe-sad.png" alt="">
                     <div class="caption">Sad</div>
-                 </div>
-                 <div class="card">
+                </div>
+                <div class="card">
                     <img class="img" src="../images/pepe-clown.png" alt="">
                     <div class="caption">Clown</div>
-                 </div>
+                </div>
             </div>
         </div>
 
-        <div class="section quote">
-            QUOTE
+        <div class="quote">
+            <div class="quote-text">
+                Lacrimosa dies illa
+                Qua resurget ex favilla
+                Judicandus homo reus
+                Lacrimosa dies illa
+                Qua resurget ex favilla
+                Judicandus homo reus:
+                Huic ergo parce Deus
+                Pie Jesu, Jesu Domine
+                Dona eis requiem
+                Dona eis requiem
+                Amen
+            </div>
+            <div class="quote-author">
+                -Wolfgang Amadeus Mozart
+            </div>
         </div>
 
-        <div class="section signup">
-            SIGNUP
+        <div class="action">
+            <div class="action-container">
+                <div class=text>
+                    <div class="text-title">Call to action! It's time!</div>
+                    <div class="text-caption">Sign up for Pepe newsletters by clicking that button right over there!</div>
+                </div>
+                <button class="sign-up-button-inverted">
+                    Sign up
+                </button>
+            </div>
         </div>
         <div class="footer">
-            For The Odin Project
+            This practice project was made for <a class="odin-credit" href="https://www.theodinproject.com/">The Odin Project</a>
         </div>
     </div>
 
