--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <div class="action-container">
                 <div class=text>
                     <div class="text-title">Call to action! It's time!</div>
-                    <div class="text-caption">Sign up for Pepe newsletters by clicking that button right over there!</div>
+                    <div class="text-caption">Sign up for Pepe newsletters by clicking that button right over there!
+                    </div>
                 </div>
                 <button class="sign-up-button-inverted">
                     Sign up
@@ -97,10 +98,10 @@
             </div>
         </div>
         <div class="footer">
-            This practice project was made for <a class="odin-credit" href="https://www.theodinproject.com/">The Odin Project</a>
+            This practice project was made for <a class="odin-credit" href="https://www.theodinproject.com/">The Odin
+                Project</a>
         </div>
     </div>
-
 </body>
 
 </html>
