Attempting to fix broken image links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="logo">
-                <img class="pepe-logo" src="/d-x-s/main/images/pepe-logo.png" alt="The logo!!!">
+                <img class="pepe-logo" src="./images/pepe-logo.png" alt="The logo!!!">
             </div>
             <div class="header-links">
                 <a href="#">home</a>
@@ -39,7 +39,7 @@
                     Now I have
                 </button>
             </div>
-            <img class="pepe" src="/d-x-s/main/images/pepe_signup.jpeg" alt="Sign up now!!!">
+            <img class="pepe" src="./images/pepe_signup.jpeg" alt="Sign up now!!!">
         </div>
 
         <div class="cards">
@@ -48,19 +48,19 @@
             </div>
             <div class="gallery">
                 <div class="card">
-                    <img class="img" src="/d-x-s/main/images/pepe-happy.png" alt="">
+                    <img class="img" src="./images/pepe-happy.png" alt="">
                     <div class="caption">Happy</div>
                 </div>
                 <div class="card">
-                    <img class="img" src="/d-x-s/main/images/pepe-smug.png" alt="">
+                    <img class="img" src="./images/pepe-smug.png" alt="">
                     <div class="caption">Smug</div>
                 </div>
                 <div class="card">
-                    <img class="img" src="/d-x-s/main/images/pepe-sad.png" alt="">
+                    <img class="img" src="./images/pepe-sad.png" alt="">
                     <div class="caption">Sad</div>
                 </div>
                 <div class="card">
-                    <img class="img" src="/d-x-s/main/images/pepe-clown.png" alt="">
+                    <img class="img" src="./images/pepe-clown.png" alt="">
                     <div class="caption">Clown</div>
                 </div>
             </div>
