Add GitHub information

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             </div>
         </div>
         <div class="footer">
-            This practice project was made for <a class="odin-credit" href="https://www.theodinproject.com/">The Odin
-                Project</a>
+            <div>This practice project was made for <a class="odin-credit" href="https://www.theodinproject.com/" style="text-decoration: underline">The Odin Project</a></div>
+            <div>See the code on <a class="odin-credit" href="https://github.com/d-x-s/odin-landing-page" style="text-decoration: underline">GitHub</a></div>
         </div>
     </div>
 </body>
